@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<root xml:id="SomeID">
+  <!-- This comment should not be included in the digest. -->
+  <ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+    <ds:SignedInfo>
+      <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
+      <ds:SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
+      <ds:Reference URI="#SomeID">
+        <ds:Transforms>
+          <ds:Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/>
+          <ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#WithComments"/>
+        </ds:Transforms>
+        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
+        <ds:DigestValue>V1FzfeY+OrTA2H0ubFnbhFEeGZo=</ds:DigestValue>
+      </ds:Reference>
+    </ds:SignedInfo>
+    <ds:SignatureValue>yZ1QNzmj5LYPgomC9CqB2GzE4tfuUZer8w3oFcY4WCF3gWKc6uSFcYt4D3OBzfLW
+42QEa3Aiwr0YlaT1NH3aYmo6RHP4tP6rR+udVn7eRw2mdiskk6opV+iMeykT5sU/
+0NIUwrIbVV3/ztpjzA/3hAv/fp8r17BJA54fVt0J+laOg+IQaYS2ekjDUBONXV7P
+BE6fH1U31fTTf8+PPW5tXkqygjfJSgdYHEwL1VCp/EFtgPGRMAx/1vYntpHro4hj
+k1ls3AcSG9b7zbJAeHAvcqtCxnAa+yL3tC0JRXOFtkicaEFXMKT50RY6/qHPrSjy
+CDWiY5/a4zuCh9vQYR1zHQ==</ds:SignatureValue>
+  </ds:Signature>
+  <!-- Neither should this comment be included. -->
+  <childnode>
+    sometext
+    <!-- Nor this comment. -->
+  </childnode>
+</root>
